	PR c++/56247 	* pt.c (eq_specializations): Set comparing_specializations. 	* tree.c (cp_tree_equal): Check it. 	* cp-tree.h: Declare it.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@195922 138bc75d-0d04-0410-961f-82ee72b054a4